# NUP

./: README-pipeline.md  RUN.md  SPEC_Neuronium.tsv  deploy.sh  docker-compose.yml  index.html  opencode.md
pipeline/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  prd.json  pyproject.toml
pipeline/demo/: README.md  regenerate.sh
pipeline/docs/01-features/: F01-source-ingestion.md  F011-review-submission.md  F012-review-decision.md  F013-edit-mode.md  F02-summarization.md  F03-telegram-publication.md  F04-voiceover-script.md  F05-segment-decomposition.md  F06-tts.md  F07-stock-and-vision.md  F08-video-assembly.md  F09-reels-publication.md  F10-orchestration.md  README.md
pipeline/docs/02-bdd/: F01-source-ingestion.feature  F011-review-submission.feature  F012-review-decision.feature  F013-edit-mode.feature  F08-video-assembly.feature  other-features.feature
pipeline/docs/03-requirements/: functional.md  non-functional.md
pipeline/docs/04-architecture/: data-er.md  dfd.md  infrastructure.md  openapi.yaml  overview.md
pipeline/docs/05-prompts/: article-bilingual-summary.md  article-summary.md  frame-description.md  reels-caption.md  reels-title.md  segment-decomposition.md  video-selection.md  voiceover-script.md
pipeline/docs/06-impl-plan/: plan.md
pipeline/docs/07-tests-matrix/: traceability.md
pipeline/tests/: conftest.py
pipeline/tests/e2e/: test_render_endpoint.py
pipeline/tests/integration/: test_ffmpeg_real.py
pipeline/tests/unit/: test_article_repo.py  test_article_repo_pg.py  test_atom_youtube.py  (+30 more)
(+125 files in other folders)
