[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nup-pipeline"
version = "0.1.0"
description = "Self-hosted news → summary → Telegram → Reels pipeline (own DB + own FFmpeg renderer)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "celery>=5.4",
    "redis>=5.0",
    "boto3>=1.34",
    "minio>=7.2",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "testcontainers[postgres,minio]>=4.7",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: pure unit tests, no I/O",
    "integration: requires ffmpeg or local services",
    "e2e: full HTTP round-trip via TestClient",
    "docker: requires docker (testcontainers)",
    "req(*ids): trace tests to requirement IDs (REQ-Fxx-NNN)",
]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
